# CyberXero-Toolkit

./: Cargo.toml  README.md  install.sh  uninstall.sh
.cargo/: config.toml
cyberxero-auth/: Cargo.toml
cyberxero-auth/src/: client.rs  daemon.rs  lib.rs  protocol.rs  shared.rs
gtk-4.0/: colors.css  gtk.css
gui/: Cargo.toml  build.rs
gui/resources/: resources.gresource.xml
gui/resources/css/: style.css
gui/resources/ui/: main.ui
gui/src/: config.rs  main.rs
gui/src/core/: autostart.rs  daemon.rs  download.rs  mod.rs
gui/src/ui/: app.rs  navigation.rs  utils.rs
packaging/: PKGBUILD  cyberxero-toolkit.desktop  xero-toolkit.desktop
resources/: resources.gresource.xml
resources/ui/: dependency_error_dialog.ui  main.ui  selection_dialog.ui  xerolinux_check_dialog.ui
resources/ui/dialogs/: terminal_dialog.ui
resources/ui/tabs/: containers_vms.ui  customization.ui  drivers.ui  gaming_tools.ui  main_page.ui  multimedia_tools.ui  servicing_system_tweaks.ui
sources/scripts/: self-update.sh  sudo
sources/systemd/: scx.service.in
src/: config.rs  main.rs  utils.rs
src/core/: context.rs  helpers.rs  mod.rs  system_check.rs
src/ui/: app.rs  mod.rs  selection_dialog.rs  tabs.rs  terminal.rs
src/ui/command_execution/: context.rs  executor.rs  mod.rs  widgets.rs
src/ui/dialogs/: terminal.rs
src/ui/pages/: containers_vms.rs  customization.rs  gaming_tools.rs  main_page.rs  mod.rs  multimedia_tools.rs  servicing.rs
src/ui/task_runner/: command.rs  executor.rs  widgets.rs
tools/: bump-version.sh  lint.sh
xero-auth/src/: daemon.rs  protocol.rs
(+50 files in other folders)
