[workspace]
members = ["gui", "cyberxero-auth"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MurderFromMars <untamedprodigy67@gmail.com>"]
license = "GPL-3.0-or-later"
description = "GTK4 GUI to manage CyberXero Toolkit tools and settings on Arch-based Linux"
repository = "https://github.com/MurderFromMars/CyberXero-Toolkit"
keywords = ["cyberxero", "gtk4", "system-management", "tools"]
categories = ["gui", "os::linux-apis"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false
